fix(styles): Fix word wrap overflow in custom containers

--- a/guide/.vuepress/styles/index.styl
+++ b/guide/.vuepress/styles/index.styl
@@ -1,6 +1,13 @@
 .custom-block.danger,
 details.custom-block.details,
 .custom-block.tip,
+.custom-block.warning {
+	overflow-wrap: break-word;
+}
+
+.custom-block.danger,
+details.custom-block.details,
+.custom-block.tip,
 .custom-block.warning,
 .discord-messages {
 	border-radius: 6px;
